# texture_render_nif

./: .gitignore  LICENSE  README.md  checksum-Elixir.AssetTextureRender.Native.exs  mix.exs
.devcontainer/: .env  .env.templete  Dockerfile  devcontainer.json  devcontainer.json.templete  docker-compose.yml  poststart.sh
.github/workflows/: release.yml
config/: config.exs
lib/: asset_texture_render.ex
lib/asset_texture_render/: native.ex
native/texture_render/: Cargo.toml  README.md
native/texture_render/src/: UniformRandom.rs  lib.rs  utils.rs  vmatrix.rs
test/: asset_texture_render_test.exs
