[package]
name = "texture_render"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "texture_render"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.31.0"
image = "*"
chrono="0.4"
ndarray="0.15.4"
clap = { version = "4.5.0", features = ["derive"] }
serde = { version = "1.*", features = ["derive"] }  
serde_json = "1.*"
